force-app/main/default/objects/Inhabitant__c/Inhabitant__c.object-meta.xml
<CustomObject>
    <label>Inhabitant</label>
    <nameField>
        <displayFormat>IN-{0000}</displayFormat>
        <label>Inhabitant Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inhabitants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>