force-app/main/default/objects/Inhabitant__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <label>Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Inhabitants</relationshipLabel>
    <relationshipName>Inhabitants</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>