force-app/main/default/objects/Inhabitant__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <label>Full Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inhabitants</relationshipLabel>
    <relationshipName>Inhabitants</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>