force-app/main/default/objects/Inhabitant__c/fields/Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Address__c</fullName>
    <label>Mailing Address</label>
    <referenceTo>Address__c</referenceTo>
    <relationshipLabel>Related Inhabitants</relationshipLabel>
    <relationshipName>Inhabitants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>