force-app/main/default/objects/Inhabitant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Full_Name__c</columns>
    <columns>Mailing_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>